# google-assistant-desktop-unofficial

./: .babelrc  .cirrus.yml  .eslintignore  .eslintrc  .gitignore  .linguirc  .travis.yml  .yarnrc.yml  LICENSE  README.md  babel.config.js  electron-builder.json  generate_assistant_gens.sh  index.html  jest.config.js  lit-localize.json  package.json  postcss.config.js  tsconfig.json  tslint.json  typings.d.ts  vite.config.ts
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md  user_story.md
jest/: base.config.js  main.config.js  renderer.config.js
scripts/: build.ts  dev.ts  notarize.js  prepare-build.ts  upload.ts
src/: communication.ts  hello-world.element.ts  hello-world.styles.scss  index.html  main.js  main.ts  package.json  renderer.js  store.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: cmd.rs  main.rs
src/actions/: shell.js
src/components/: icons.js
src/i18n/: index.ts
src/main/: index.spec.ts  index.ts  store.ts  tsconfig.json
src/reducers/: shell.js
src/renderer/: index.ejs  index.ts  store.ts  (+1 more)
webpack/: base.config.ts  dev-server.config.js  dev.config.js  main.base.config.ts  main.dev.config.ts  main.prod.config.ts  prod.config.js  renderer.base.config.ts  renderer.dev.config.ts  renderer.prod.config.ts  shared.base.config.ts  shared.dev.config.ts  shared.prod.config.ts
xliff/: de-DE.xlf  en-AU.xlf  en-CA.xlf  en-GB.xlf  en-IN.xlf  en-US.xlf  es-ES.xlf  es-MX.xlf  fr-CA.xlf  fr-FR.xlf  it-IT.xlf  ja-JP.xlf  ko-KR.xlf  pt-BR.xlf
(+138 files in other folders)
