[package]
name = "google-assistant-desktop-unofficial"
version = "0.1.0"
description = "A desktop version for the Google Assistant (UNOFFICIAL)"
authors = ["Giorgio Garasto <giorgio@garasto.me>"]
license = "MIT"
repository = "https://github.com/Dabolus/google-assistant-desktop-unofficial.git"
default-run = "google-assistant-desktop-unofficial"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.8", features = [] }
tonic-build = "0.7"
git2 = "0.14"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.9", features = ["api-all"] }
tonic = "0.7"
prost = "0.10"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
